compiler/arsenal-boot/crates/arsenal_parse/tests/snapshots/corpus__pass_corpus@059_recursive_fib.gw.snap
---
source: crates/arsenal_parse/tests/corpus.rs
expression: dump_text
---
Module @1:1..5:1
  FnDecl @1:1..5:1
    KwPub `pub` @1:1..1:4
    KwFn `fn` @1:5..1:7
    Ident `fib` @1:8..1:11
    ParamList @1:11..1:20
      LParen `(` @1:11..1:12
      Param @1:12..1:18
        Ident `n` @1:12..1:13
        Colon `:` @1:13..1:14
        PathType @1:15..1:18
          Ident `i64` @1:15..1:18
      RParen `)` @1:18..1:19
    RetType @1:20..1:27
      Arrow `->` @1:20..1:22
      PathType @1:23..1:27
        Ident `i64` @1:23..1:26
    Block @1:27..5:1
      LBrace `{` @1:27..1:28
      ExprStmt @2:5..3:5
        IfExpr @2:5..3:5
          KwIf `if` @2:5..2:7
          BinaryExpr @2:8..2:14
            PathExpr @2:8..2:10
              Ident `n` @2:8..2:9
            Lt `<` @2:10..2:11
            LiteralExpr @2:12..2:14
              IntLit `2` @2:12..2:13
          Block @2:14..3:5
            LBrace `{` @2:14..2:15
            ExprStmt @2:16..2:26
              ReturnExpr @2:16..2:24
                KwReturn `return` @2:16..2:22
                PathExpr @2:23..2:24
                  Ident `n` @2:23..2:24
              Semi `;` @2:24..2:25
            RBrace `}` @2:26..2:27
      ExprStmt @3:5..4:1
        ReturnExpr @3:5..3:35
          KwReturn `return` @3:5..3:11
          BinaryExpr @3:12..3:35
            CallExpr @3:12..3:23
              PathExpr @3:12..3:15
                Ident `fib` @3:12..3:15
              ArgList @3:15..3:23
                LParen `(` @3:15..3:16
                BinaryExpr @3:16..3:21
                  PathExpr @3:16..3:18
                    Ident `n` @3:16..3:17
                  Minus `-` @3:18..3:19
                  LiteralExpr @3:20..3:21
                    IntLit `1` @3:20..3:21
                RParen `)` @3:21..3:22
            Plus `+` @3:23..3:24
            CallExpr @3:25..3:35
              PathExpr @3:25..3:28
                Ident `fib` @3:25..3:28
              ArgList @3:28..3:35
                LParen `(` @3:28..3:29
                BinaryExpr @3:29..3:34
                  PathExpr @3:29..3:31
                    Ident `n` @3:29..3:30
                  Minus `-` @3:31..3:32
                  LiteralExpr @3:33..3:34
                    IntLit `2` @3:33..3:34
                RParen `)` @3:34..3:35
        Semi `;` @3:35..3:36
      RBrace `}` @4:1..4:2
